defaultTasks 'clean', 'test', 'aggregate'

repositories {
    mavenCentral()
}

buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "net.serenity-bdd:serenity-gradle-plugin:3.3.1"
        classpath("net.serenity-bdd:serenity-single-page-report:3.3.1")
    }
}
group 'femsa'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: "net.serenity-bdd.serenity-gradle-plugin"

sourceCompatibility = 1.8
targetCompatibility = 1.8

ext {
    slf4jVersion = '1.7.7'
    serenityCoreVersion = '3.3.1'
    serenityCucumberVersion = '3.3.1'
    junitVersion = '4.13.1'
    assertJVersion = '3.23.1'
    logbackVersion = '1.2.10'
}

dependencies {
    implementation "ch.qos.logback:logback-classic:${logbackVersion}",
            "net.serenity-bdd:serenity-ensure:3.2.0"
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    testImplementation "net.serenity-bdd:serenity-core:${serenityCoreVersion}",
            "net.serenity-bdd:serenity-cucumber:${serenityCucumberVersion}",
            "net.serenity-bdd:serenity-screenplay:${serenityCoreVersion}",
            "net.serenity-bdd:serenity-screenplay-rest:${serenityCoreVersion}",
            "net.serenity-bdd:serenity-screenplay-webdriver:${serenityCoreVersion}",
            "junit:junit:${junitVersion}",
            "org.junit.platform:junit-platform-launcher:1.8.2",
            "org.junit.jupiter:junit-jupiter-engine:5.8.2",
            "org.junit.vintage:junit-vintage-engine:5.8.2",
            'io.appium:java-client:8.1.1',
            "org.assertj:assertj-core:${assertJVersion}"

}

test {
    testLogging.showStandardStreams = true
    systemProperties System.getProperties()
}

serenity {
    // Specify the root package of any JUnit acceptance tests to appear in the Serenity report
    testRoot = "femsa"
    // Specify the root directory of any Cucumber feature files
    requirementsDir = "src/test/resources/features"

}

gradle.startParameter.continueOnFailure = true

test.finalizedBy(aggregate)
